test/should-fail/vsgc1310Applet.visage
/*
 * @test/compile-error
 * @compile vsgc1310Application.visage
 */

public class vsgc1310Applet {
    var app:vsgc1310Application;

    function do() {
        app.content;
    }
}
